==== LimeChat 0.17.2 ====

2008-04-15  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, my address was forgotten after reconnecting.

2008-04-09  Satoshi Nakagawa <artension@gmail.com>

	Fixed a nil access bug in DccManager#tableView_objectValueForTableColumn_row.

2008-03-27  Satoshi Nakagawa <artension@gmail.com>

	Tweaked the menu title of close current panel.

2008-03-27  Satoshi Nakagawa <artension@gmail.com>

	Changed Cmd-w to close current panel without confirmation when the panel is a talk.

2008-03-27  Satoshi Nakagawa <artension@gmail.com>

	Changed Cmd-w to close current panel with confirmation when the main window is foreground.
	Changed Cmd-Shift-w to close current panel without confirmation.

==== LimeChat 0.17.1 ====

2008-03-26  Satoshi Nakagawa <artension@gmail.com>

	Assigned Cmd-w to close the window, and Cmd-Shift-w to close the current channel.

2008-03-25  Satoshi Nakagawa <artension@gmail.com>

	Changed /part without parameters to close the current talk.
	On the paste dialog, changed "Privmsg command" and "Notice command" to "Send to channel" and "Send Notice to Channel" respectively.

2008-03-20  Satoshi Nakagawa <artension@gmail.com>

	Changed to order front the main window when clicked on a growl notification.

2008-03-20  Satoshi Nakagawa <artension@gmail.com>

	Changed to not use nick format for transcripts.

2008-03-19  Satoshi Nakagawa <artension@gmail.com>

	Changed to handle /whois to get more information.

2008-03-19  Kevin Ballard <kballard@gmail.com>

	Added Rakefile and changed install path to /Applications.

2008-03-19  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug in utf-8 string validator.

2008-03-19  Satoshi Nakagawa <artension@gmail.com>

	Added fallback encoding.

2008-03-16  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, log views dropped received lines before initializing.

2008-03-14  Satoshi Nakagawa <artension@gmail.com>

	Refactoring key handlers.
	Added opt-up/down to move around histories.
